[package]
name = "pdf-ocr"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
indicatif = "0.17"
lopdf = "0.35"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
webp = "0.3"
